macros/tests/trybuild/mod.stderr
error: cannot use `serde_args::generate` macro on module
 --> tests/trybuild/mod.rs:4:1
  |
4 | mod foo {}
  | ^^^^^^^^^^
