macros/tests/trybuild/mod.rs
use serde_args_macros::generate;

#[generate]
mod foo {}

fn main() {}
